<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:layout_marginTop="30sp"
    android:layout_marginEnd="30sp">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:singleLine="true"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/CANCEL"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_cancel_24" />


            <TextView
                android:id="@+id/checkin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:singleLine="true"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/SAVE"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_save_24" />


            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:singleLine="true"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/DELETE"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_delete_outline_24" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/firstName"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:text="@string/FIRST_NAME" />

        <EditText
            android:id="@+id/firstName"
            android:paddingTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:inputType="text"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:labelFor="@+id/lastName"
            android:text="@string/LAST_NAME"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:inputType="text"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:labelFor="@+id/email"
            android:text="@string/EMAIL"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:labelFor="@+id/phone"
            android:text="@string/PHONE"/>


        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:inputType="phone"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/last_checkin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:labelFor="@+id/has_image"
            android:text="Dernier checkin"/>

        <EditText
            android:id="@+id/last_checkin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:inputType="none"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:paddingBottom="20dp"
            tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/has_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:labelFor="@+id/has_image"
            android:text="@string/IMAGE"/>

        <CheckBox
            android:id="@+id/has_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/checkinsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry"
            android:textStyle="bold"
            android:labelFor="@+id/has_image"
            android:text="Présences"/>
        <TextView
            android:id="@+id/dates"
            android:paddingStart="3dp"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>