<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:layout_marginTop="30sp"
    android:layout_marginEnd="30sp">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/send_error_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="true"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text="@string/SEND_ERROR_REPORT"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_attach_email_24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/buildVersionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/buildVersion"
            android:singleLine="true"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            android:text="@string/BUILD_VERSION"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/buildVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:paddingTop="0dp"
            android:singleLine="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lastDayExportedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/buildVersion"
            android:singleLine="true"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            android:text="@string/LAST_EXPORT"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/lastDayExported"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:linksClickable="true"
            android:paddingTop="0dp"
            android:singleLine="true"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:paddingBottom="20dp"
            tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/memberChangedSinceLastExportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/buildVersion"
            android:singleLine="true"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            android:text="@string/UNSAVED_DATA"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/memberChangedSinceLastExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:background="?attr/selectableItemBackground"
            android:clickable="false"
            android:focusable="false" />

        </LinearLayout>

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/distance"
            android:linksClickable="true"
            android:paddingStart="3dp"
            android:singleLine="true"
            android:text="@string/SCAN_DISTANCE"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:inputType="numberDecimal"
            android:paddingTop="0dp"
            android:linksClickable="true"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/jotformApikeyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/distance"
            android:linksClickable="true"
            android:paddingStart="3dp"
            android:singleLine="true"
            android:text="JotForm API Key"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/jotformApikey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:inputType="text"
            android:paddingTop="0dp"
            android:linksClickable="true"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/jotformIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/distance"
            android:linksClickable="true"
            android:paddingStart="3dp"
            android:singleLine="true"
            android:text="JotForm ID"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/jotformId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:inputType="text"
            android:paddingTop="0dp"
            android:linksClickable="true"
            android:singleLine="true"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>